refactor: 1. se implementa la creación del folder para subir imagenes si no existe